# ron

./: .gitignore  BUILDME.rst  README.rst  buildozer.spec  docker-compose.yml  pyproject.toml  setup.cfg
junk/: example1.py  faction.kv  faction.py  fake_modal_view.py  main.py  main0.kv  main0.py
ron/: co_lang.py  main.kv  main.py
